--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,12 @@ dependencies:
   focused_menu: ^1.0.1
   splash_screen_view: ^1.0.1
 
+  regexed_validator: ^2.0.0+1
+  simple_fontellico_progress_dialog: ^0.2.1
+  provider: 4.1.3
+
+
+
 dev_dependencies:
   flutter_launcher_icons: "^0.8.0"
   flutter_test:
